objects/S3_Association__c.object
<CustomObject>
    <description>Used to associate an S3 Reference to whatever junction you need to.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S3 Associations</relationshipLabel>
        <relationshipName>S3_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Lane__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Private Lane</description>
        <label>Private Lane</label>
        <referenceTo>Private_Lane__c</referenceTo>
        <relationshipLabel>S3 Associations</relationshipLabel>
        <relationshipName>S3_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S3_File_Name__c</fullName>
        <description>The name of the S3 Reference</description>
        <formula>S3_Reference__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S3 File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_File_Type__c</fullName>
        <description>Pulls in the Type from the S3 Reference</description>
        <formula>TEXT(S3_Reference__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S3 File Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Reference__c</fullName>
        <description>Link to the S3 file you wish to associate to the Parent</description>
        <label>S3 Reference</label>
        <referenceTo>S3_Reference__c</referenceTo>
        <relationshipLabel>S3 Associations</relationshipLabel>
        <relationshipName>S3_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>S3_URL__c</fullName>
        <description>The URL of the File in S3</description>
        <formula>S3_Reference__r.S3_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S3 URL</label>
        <type>Text</type>
    </fields>
    <label>S3 Association</label>
    <nameField>
        <displayFormat>S3Association-{0}</displayFormat>
        <label>S3 Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Associations</pluralLabel>
    <recordTypes>
        <fullName>Private_Lane</fullName>
        <active>true</active>
        <description>Used for Associations with Private Lanes</description>
        <label>Private Lane</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>